fix: fix text wrapping inside button (#78)

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -13,6 +13,7 @@
     padding: 0;
     border: none;
     background: transparent;
+    white-space: nowrap;
     transition-property: opacity, box-shadow;
     transition-duration: var(--feedback-transition-duration);
     transition-timing-function: ease-out;
@@ -39,7 +40,10 @@
 
         & .text {
             position: relative;
+            width: 100%;
             z-index: 2;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         & .progressBar {
